refactor: implement GoF Prototype Pattern and Registry Cache for configs
- Create Prototype interface and implement deep copying on Department, LeaveType, and Shift entities
- Create registries to cache config models in RAM on startup and cloning on retrieval
- Divert service read paths to Registry Cache and trigger refresh on write mutations
- Add GofPrototypePatternTest for verification and update department unit tests